--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <header class="section-header">
           <h3>Productos</h3>
-          <p>Somos distribuidores autorizados (oficiales?) de FUJI y exclusivos de Tudor en Colombia.</p>
+          <p>Somos distribuidores autorizados (oficiales?) de <a href="https://www.fujifilm.com/co/es#">FUJI</a> y exclusivos de Tudor en Colombia.</p>
         </header>
 
         <div class="row justify-content-center">
@@ -721,11 +721,11 @@
               </div>
               <div class="col-md-4 info">
                 <i class="bi bi-envelope"></i>
-                <p>servicioalcliente@xersacol.com</p>
+                <p><a href="mailto:servicioalcliente@xersacol.com">servicioalcliente@xersacol.com</a></p>
               </div>
               <div class="col-md-3 info">
                 <i class="bi bi-phone"></i>
-                <p>+57-315-305-0740</p>
+                <p>Telefono <a href="tel:573153050740">+57-315-305-0740</a></p>
               </div>
 <!--            </div>-->
 
