--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>NewBiz Bootstrap Template - Index</title>
+  <title>XER Ldta.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -463,7 +463,8 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+    <!--
+	<!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="section-bg">
       <div class="container" data-aso="zoom-in">
 
@@ -541,8 +542,8 @@
 
       </div>
     </section><!-- End Testimonials Section -->
-
-    <!-- ======= Team Section ======= -->
+	  
+	<!-- ======= Team Section ======= -->
     <section id="team">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
@@ -630,6 +631,7 @@
     </section><!-- End Team Section -->
 
     <!-- ======= Clients Section ======= -->
+<!--
     <section id="clients" class="section-bg">
 
       <div class="container" data-aos="fade-up">
@@ -693,7 +695,8 @@
 
       </div>
 
-    </section><!-- End Clients Section -->
+    </section> End Clients Section 
+-->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact">
@@ -715,7 +718,7 @@
           <div class="col-lg-6">
 -->
             <div class="row">
-              <div class="col-md-5 info">
+              <div class="col-lg-5 info">
                 <i class="bi bi-geo-alt"></i>
                 <p>Bogotá, Colombia</p>
               </div>
