--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Xer Lg-1.png" rel="icon">
+  <link href="assets/img/Xer Lg-1.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
@@ -42,8 +42,8 @@
 
       <div class="logo">
         <!-- Uncomment below if you prefer to use an text logo -->
-        <!-- <h1><a href="index.html">NewBiz</a></h1> -->
-        <a href="index.html"><img src="assets/img/Xer Lg-1.png" alt="" class="img-fluid"></a>
+        <h1><a href="index.html"><strong>XER Ltda</strong></a></h1>
+        <!-- <a href="index.html"><img src="assets/img/Xer Lg-1.png" alt="" class="img-fluid"></a>-->
       </div>
 
       <nav id="navbar" class="navbar">
@@ -83,7 +83,7 @@
     <div class="container" data-aos="fade-up">
 
       <div class="hero-img" data-aos="zoom-out" data-aos-delay="200">
-        <img src="assets/img/hero-img.svg" alt="" class="img-fluid">
+        <img src="assets/img/Xer Lg-1.png" alt="" class="img-fluid">
       </div>
 
       <div class="hero-info" data-aos="zoom-in" data-aos-delay="100">
@@ -140,6 +140,7 @@
           </div>
         </div>
 
+<!--
         <div class="row about-extra">
           <div class="col-lg-6" data-aos="fade-right">
             <img src="assets/img/about-extra-1.svg" class="img-fluid" alt="">
@@ -174,6 +175,7 @@
           </div>
 
         </div>
+-->
 
       </div>
     </section><!-- End About Section -->
@@ -211,6 +213,7 @@
               <p class="description">Contamos con productos para fotografía y revelado artistico(?). </p>
             </div>
           </div>
+<!--
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
@@ -233,6 +236,7 @@
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
             </div>
           </div>
+-->
 
         </div>
 
@@ -243,7 +247,7 @@
     <section id="why-us">
       <div class="container" data-aos="fade-up">
         <header class="section-header">
-          <h3>Why choose us?</h3>
+          <h3>Mantenemos este?</h3>
           <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
         </header>
 
@@ -316,16 +320,16 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3 class="section-title">Our Portfolio</h3>
+          <h3 class="section-title">Portafolio de Productos</h3>
         </header>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter="*" class="filter-active">TODO&nbsp;</li>
+              <li data-filter=".filter-app">Papel</li>
+              <li data-filter=".filter-card">Químico</li>
+              <li data-filter=".filter-web">Equipos</li>
             </ul>
           </div>
         </div>
@@ -469,7 +473,7 @@
       <div class="container" data-aso="zoom-in">
 
         <header class="section-header">
-          <h3>Testimonials</h3>
+          <h3>Nuestros Clientes (?)</h3>
         </header>
 
         <div class="row justify-content-center">
@@ -547,8 +551,8 @@
     <section id="team">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h3>Team</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <h3>Equipo</h3>
+          <p>Esta seccion se va o se queda?</p>
         </div>
 
         <div class="row">
@@ -558,14 +562,16 @@
               <img src="assets/img/team-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
+                  <h4>Gabriel Rodriguez</h4>
+                  <span>Ingeniero/Comercial</span>
+<!--
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
                     <a href=""><i class="bi bi-instagram"></i></a>
                     <a href=""><i class="bi bi-linkedin"></i></a>
                   </div>
+-->
                 </div>
               </div>
             </div>
@@ -576,14 +582,16 @@
               <img src="assets/img/team-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
+                  <h4>Martin Rodriguez</h4>
+                  <span>Soporte Comercial</span>
+<!--
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
                     <a href=""><i class="bi bi-instagram"></i></a>
                     <a href=""><i class="bi bi-linkedin"></i></a>
                   </div>
+-->
                 </div>
               </div>
             </div>
@@ -594,14 +602,16 @@
               <img src="assets/img/team-3.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>William Anderson</h4>
-                  <span>CTO</span>
+                  <h4>Mario Algo</h4>
+                  <span>Técnico</span>
+<!--
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
                     <a href=""><i class="bi bi-instagram"></i></a>
                     <a href=""><i class="bi bi-linkedin"></i></a>
                   </div>
+-->
                 </div>
               </div>
             </div>
@@ -612,14 +622,16 @@
               <img src="assets/img/team-4.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Amanda Jepson</h4>
-                  <span>Accountant</span>
+                  <h4>Gustavo Algo diferente</h4>
+                  <span>Area Administrativa</span>
+<!--
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
                     <a href=""><i class="bi bi-instagram"></i></a>
                     <a href=""><i class="bi bi-linkedin"></i></a>
                   </div>
+-->
                 </div>
               </div>
             </div>
@@ -774,13 +786,14 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 footer-info">
-            <h3>NewBiz</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+          <div class="col-lg-8 col-md-6 footer-info">
+            <h3>XER LTDA</h3>
+            <p>Desde 1997 prestamos servicio comercial y técnico para la industria fotográfica de Centro y Sur America.</p>
           </div>
 
+<!--
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>UTIL</h4>
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">About us</a></li>
@@ -789,17 +802,18 @@
               <li><a href="#">Privacy policy</a></li>
             </ul>
           </div>
+-->
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h4>Contact Us</h4>
+            <h4>CONTACTENOS</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Bogotá, Colombia&nbsp;&nbsp; <br>
+              <strong>Mobil/Whatsapp:</strong> <a href="tel:573153050740">+57-315-305-0740</a><br>
+              <strong>Email:</strong> <a href="mailto:servicioalcliente@xersacol.com">servicioalcliente@xersacol.com</a><br>
+			  <strong>Ventas:</strong> <a href="mailto:ventas@xersacol.com">ventas@xersacol.com</a><br>
             </p>
 
+<!--
             <div class="social-links">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -807,9 +821,11 @@
               <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
+-->
 
           </div>
 
+<!--
           <div class="col-lg-3 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
@@ -817,6 +833,7 @@
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
+-->
 
         </div>
       </div>
